Enhance MainComponent with audio initialization, UI improvements, and layout management; update .gitignore to exclude .vscode; expand README with build and architecture details; add audio loopback support documentation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,17 @@ target_sources(MCAM
         Source/Core/MainComponent.cpp
         Source/Core/Logger.cpp
         Source/JuceHeader.h
+
+        # Audio Pipeline
+        Source/Audio/AudioCallback.cpp
+        Source/Audio/AudioEngine.cpp
+        Source/Audio/Devices/AudioDeviceManager.cpp
+        Source/Audio/Processing/BufferProcessor.cpp
+
+        # UI Components
+        Source/UI/Meters/MeterComponent.cpp
+        Source/UI/RTA/RTAComponent.cpp
+        Source/UI/MonitoringSlotComponent.cpp
         # Add other source files as they are created
 )
 
